CSS Grid oppgave
vil gjøre den om til grid layout

--- a/index.html
+++ b/index.html
@@ -5,9 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="main.css">
-    <title>Document</title>
+    <title>BerneySandersSideProject</title>
 </head>
 <body>
-    
+
+<div class="front-page">
+    <div class="front-header">Header</div>
+    <div class="front-menu">Menu</div>
+    <div class="front-maincontent">MainContent</div>
+    <div class="front-footer">Footer</div>
+</div>
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
